# LoRA_are_lie_detectors

./: .gitignore  LICENSE.md  README.md  justfile  pyproject.toml  research_log.md
notebooks/: 01_mjc copy.ipynb  01_mjc ia3.ipynb  01_mjc.ipynb  01_mjc_exp.ipynb  01_mjc_lie_loss.ipynb  01_simple.ipynb  01_try_ds.ipynb  01_try_models.ipynb  02_evals.ipynb  02_test_model.ipynb  03_mjc_ltold_to_lie_loss.ipynb  03_mjc_told_to_lie_loss copy.ipynb  03_mjc_told_to_lie_loss.ipynb  03_scratch.ipynb  04_mjc_truth copy.ipynb  04_mjc_truth.ipynb  05_bias_only_adapter.ipynb  05_mjc_lie.ipynb  06_mjc_lie_wkv.ipynb  06_mjc_opposite_wkv.ipynb  06b_mjc_lie_wkv good.ipynb  06b_mjc_lie_wkv.ipynb  06b_mjc_lie_wkv_more_layers.ipynb  06c_mjc_lie_ia3_residual_2layers.ipynb  06c_mjc_lie_ia3_residual_TODO.ipynb  06c_mjc_lie_ia3_residual_nodiff2.ipynb  07_compare_probes.ipynb  100_dev_plotting.ipynb  101_dev_llama.ipynb  102_dev_importance.ipynb  102_dev_known_lies.ipynb  102_dev_sys_prompts.ipynb  103_dev_try_models.ipynb  104_try_ds.ipynb  106_check_labels.ipynb  107_auc_vs_f1_vs_acc.ipynb  108_dev_ds.ipynb  109_dev_sae.ipynb  10_compare_probes copy.ipynb  10_compare_probes.ipynb  (+19 more)
src/: config.py
src/datasets/: act_dm.py  dm.py  scores.py
src/eval/: collect.py  ds.py  gen.py  helpers.py  interventions.py  labels.py  pl_sk.py
src/helpers/: __init__.py  ds.py  layers.py  lightning.py  pandas_classification_report.py  scores.py  select.py  shared_dataset.py  sklearn_lightning.py  torch.py  torch_helpers.py  typing.py
src/iris/: readme.md  tokenizer.py
src/llms/: load.py  pl_lora_ft.py
(+26 files in other folders)
