[tool.poetry]
name = "src"
version = "0.1.0"
description = "building a lie detector by ranking pairs of hidden states"
authors = ["wassname <git@wassname.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
torch = {version = "^2.1.0+cu118", source = "pytorch"}
simple-parsing = "^0.1.4"
tqdm = "^4.66.1"
datasets = "^2.14.5"
transformers = "^4.34.0"
optimum = "^1.13.2"
numpy = "^1.26.1"
pandas = "^2.1.1"
lightning = "^2.1.3"
matplotlib = "^3.8.0"
loguru = "^0.7.2"
einops = "^0.7.0"
eleuther-elk = "0.1.1"
scikit-learn = "^1.3.1"
pytorch-optimizer = "^2.12.0"
pathvalidate = "^3.2.0"
torchinfo = "^1.8.0"
jaxtyping = "^0.2.24"
bitsandbytes = "^0.41.3.post2"
packaging = "^23.2"
peft = "^0.7.1"
ipywidgets = "^8.1.1"
tabulate = "^0.9.0"
seaborn = "^0.13.0"
mapie = "^0.7.0"
baukit = {git = "https://github.com/davidbau/baukit"}
sparse-autoencoder = "^1.8.0"
transformer-lens = "^1.12.0"
pytest = "^7.4.4"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"
black = "^23.10.0"
pylama = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
